# Automake Settings
# Copyright (C) 2007-2013 kaoru
# $Id$

headers = \
    tetengo2.detail.stub.alert.h \
    tetengo2.detail.stub.common_dialog.h \
    tetengo2.detail.stub.config.h \
    tetengo2.detail.stub.cursor.h \
    tetengo2.detail.stub.drawing.h \
    tetengo2.detail.stub.encoding.h \
    tetengo2.detail.stub.gui_fixture.h \
    tetengo2.detail.stub.menu.h \
    tetengo2.detail.stub.message_handler.h \
    tetengo2.detail.stub.message_loop.h \
    tetengo2.detail.stub.mouse_capture.h \
    tetengo2.detail.stub.scroll.h \
    tetengo2.detail.stub.system_color.h \
    tetengo2.detail.stub.unit.h \
    tetengo2.detail.stub.virtual_key.h \
    tetengo2.detail.stub.widget.h

extra_headers = \
    tetengo2.detail.stub.0namespace.h \
    tetengo2.detail.windows.0namespace.h \
    tetengo2.detail.windows.alert.h \
    tetengo2.detail.windows.com_ptr.h \
    tetengo2.detail.windows.common_dialog.h \
    tetengo2.detail.windows.config.h \
    tetengo2.detail.windows.cursor.h \
    tetengo2.detail.windows.direct2d.0namespace.h \
    tetengo2.detail.windows.direct2d.drawing.h \
    tetengo2.detail.windows.direct2d.error_category.h \
    tetengo2.detail.windows.encoding.h \
    tetengo2.detail.windows.error_category.h \
    tetengo2.detail.windows.font.h \
    tetengo2.detail.windows.gdiplus.0namespace.h \
    tetengo2.detail.windows.gdiplus.drawing.h \
    tetengo2.detail.windows.gdiplus.error_category.h \
    tetengo2.detail.windows.gdiplus.gui_fixture.h \
    tetengo2.detail.windows.gui_fixture.h \
    tetengo2.detail.windows.menu.h \
    tetengo2.detail.windows.message_handler.h \
    tetengo2.detail.windows.message_handler.0namespace.h \
    tetengo2.detail.windows.message_handler_detail.abstra.h \
    tetengo2.detail.windows.message_handler_detail.button.h \
    tetengo2.detail.windows.message_handler_detail.contro.h \
    tetengo2.detail.windows.message_handler_detail.custom.h \
    tetengo2.detail.windows.message_handler_detail.dialog.h \
    tetengo2.detail.windows.message_handler_detail.list_b.h \
    tetengo2.detail.windows.message_handler_detail.messag.h \
    tetengo2.detail.windows.message_handler_detail.pictur.h \
    tetengo2.detail.windows.message_handler_detail.text_b.h \
    tetengo2.detail.windows.message_handler_detail.widget.h \
    tetengo2.detail.windows.mouse_capture.h \
    tetengo2.detail.windows.picture.h \
    tetengo2.detail.windows.scroll.h \
    tetengo2.detail.windows.system_color.h \
    tetengo2.detail.windows.unit.h \
    tetengo2.detail.windows.virtual_key.h \
    tetengo2.detail.windows.widget.h \
    tetengo2.detail.windows.windows_version.h

pkginclude_HEADERS = $(headers)
EXTRA_DIST = $(extra_headers)
