# Automake Settings
# Copyright (C) 2007-2012 kaoru
# $Id$

headers = \
    tetengo2.gui.alert.h \
    tetengo2.gui.common_dialog.file_open.h \
    tetengo2.gui.cursor.cursor.h \
    tetengo2.gui.cursor.system_cursor.h \
    tetengo2.gui.drawing.background.h \
    tetengo2.gui.drawing.canvas.h \
    tetengo2.gui.drawing.color.h \
    tetengo2.gui.drawing.font.h \
    tetengo2.gui.drawing.picture.h \
    tetengo2.gui.drawing.picture_reader.h \
    tetengo2.gui.drawing.solid_background.h \
    tetengo2.gui.drawing.transparent_background.h \
    tetengo2.gui.drawing.widget_canvas.h \
    tetengo2.gui.fixture.h \
    tetengo2.gui.measure.h \
    tetengo2.gui.menu.abstract_popup_menu.h \
    tetengo2.gui.menu.main_menu.h \
    tetengo2.gui.menu.menu.h \
    tetengo2.gui.menu.menu_command.h \
    tetengo2.gui.menu.menu_separator.h \
    tetengo2.gui.menu.menu_traits.h \
    tetengo2.gui.menu.popup_menu.h \
    tetengo2.gui.menu.recursive_menu_iterator.h \
    tetengo2.gui.message.dialog_message_loop.h \
    tetengo2.gui.message.menu_observer_set.h \
    tetengo2.gui.message.message_loop.h \
    tetengo2.gui.message.message_loop_break.h \
    tetengo2.gui.message.mouse_observer_set.h \
    tetengo2.gui.message.paint_observer_set.h \
    tetengo2.gui.message.window_observer_set.h \
    tetengo2.gui.unit.em.h \
    tetengo2.gui.unit.pixel.h \
    tetengo2.gui.unit.unit.h \
    tetengo2.gui.widget.abstract_window.h \
    tetengo2.gui.widget.button.h \
    tetengo2.gui.widget.control.h \
    tetengo2.gui.widget.dialog.h \
    tetengo2.gui.widget.image.h \
    tetengo2.gui.widget.label.h \
    tetengo2.gui.widget.link_label.h \
    tetengo2.gui.widget.traits.abstract_window_traits.h \
    tetengo2.gui.widget.traits.button_traits.h \
    tetengo2.gui.widget.traits.control_traits.h \
    tetengo2.gui.widget.traits.dialog_traits.h \
    tetengo2.gui.widget.traits.image_traits.h \
    tetengo2.gui.widget.traits.label_traits.h \
    tetengo2.gui.widget.traits.link_label_traits.h \
    tetengo2.gui.widget.traits.widget_traits.h \
    tetengo2.gui.widget.traits.window_traits.h \
    tetengo2.gui.widget.widget.h \
    tetengo2.gui.widget.window.h

extra_headers =

pkginclude_HEADERS = $(headers)
EXTRA_DIST = $(extra_headers)
